--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="lime">
-
-    <button class="purple btn-large waves-effect animated pulse infinite">Hello Developer! Let's get started</button>
-    <button class="btn-floating btn-large waves-effect waves-light pink"><i class="icon ion-android-add"></i></button>
-    <button class="btn-floating btn-large waves-effect waves-light pink"><i class="fa fa-minus"></i></button>
+<body class="blue-grey lighten-5">
+    <nav class="teal">
+        <div class="nav-wrapper container">
+            <a href="index.html" class="brand-logo">
+                <i class="icon left ion-heart"></i>
+                Materializecss Starter
+            </a>
+            <ul class="right hide-on-med-and-down">
+                <li><a href="#!">link1</a></li>
+                <li><a href="#!">link2</a></li>
+                <li><a href="#!">link3</a></li>
+                <li><a href="#!">link4</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="center">
+        <h1>Materializecss Starter</h1>
+        <button class="purple btn-large waves-effect animated pulse infinite">Hello Developer! Let's get started</button>
+        <button class="btn-floating btn-large waves-effect waves-light pink"><i class="icon ion-android-add"></i></button>
+        <button class="btn-floating btn-large waves-effect waves-light pink"><i class="fa fa-minus"></i></button>
+    </div>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
