added more samples, custom css and updated readme

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
                 <i class="icon left ion-heart hide-on-small-only"></i> Materializecss Starter
             </a>
             <ul class="right hide-on-med-and-down">
-                <li><a href="https://github.com/jalasem/materializecss_starter" class="waves-effect waves-light" target="_blank"><i class="icon ion-social-github left"></i>Github</a></li>
+                <li>
+                    <a href="https://github.com/jalasem/materializecss_starter" class="waves-effect waves-light" target="_blank"><i class="icon ion-social-github left"></i>Github</a>
+                </li>
                 <li><a href="#!" class="waves-effect">link2</a></li>
                 <li><a href="#!">link3</a></li>
                 <li><a href="#!">link4</a></li>
@@ -37,13 +39,75 @@
             </ul>
         </div>
     </nav>
-    <div class="center">
+    <section id="banner" class="center container">
         <h1>Materializecss Starter</h1>
         <button class="purple btn-large waves-effect animated pulse infinite">Hello Designer! Let's get started</button>
         <button class="btn-floating btn-large waves-effect waves-light pink"><i class="icon ion-android-add"></i></button>
         <button class="btn-floating btn-large waves-effect waves-light pink"><i class="fa fa-minus"></i></button>
-    </div>
+        <p class="flow-text">Here is a starter project that brings together Materializecss (A modern responsive front-end framework based on Material
+            Design), font-awesome, ionions and Animatecss together</p>
+        <p>Don't forget to <i class="icon ion-ios-star"></i> <a target="_blank" href="https://github.com/jalasem/materializecss_starter">star this project on <i class="icon ion-social-github"></i> Github</a>            if you find it useful</p>
+    </section>
+    <section class="row center-align container">
+        <br><br>
+        <h4>What do I get from this Project?</h4>
+        <div class="col s12 m6 l4">
+            <i class="icon ion-ios-list-outline x5"></i>
+            <h5>Material Design</h5>
+            <p>Materializecss utilizes elements and principles of Material Design and it&rsquo;s able to create a framework
+                that incorporates components and animations that provide more feedback to users plus a single underlying
+                responsive system across all platforms allow for a more unified user experience.</p>
+        </div>
+        <div class="col s12 m6 l4">
+            <i class="icon ion-ios-list-outline x5"></i>
+            <h5>Material Design</h5>
+            <p>Materializecss utilizes elements and principles of Material Design and it&rsquo;s able to create a framework
+                that incorporates components and animations that provide more feedback to users plus a single underlying
+                responsive system across all platforms allow for a more unified user experience.</p>
+        </div>
+        <div class="col s12 m6 l4">
+            <i class="icon ion-ios-list-outline x5"></i>
+            <h5>Material Design</h5>
+            <p>Materializecss utilizes elements and principles of Material Design and it&rsquo;s able to create a framework
+                that incorporates components and animations that provide more feedback to users plus a single underlying
+                responsive system across all platforms allow for a more unified user experience.</p>
+        </div>
+    </section>
 
+    <footer class="page-footer teal darken-4">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Project Description</h5>
+                    <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias ipsum eum enim, cumque porro at aliquam voluptatem commodi quia error, consequatur, beatae ea tempora illum veritatis nostrum expedita nisi quas .</p>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Links</h5>
+                    <ul>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Social</h5>
+                    <ul class="social">
+                        <li><a class="grey-text text-lighten-3" href="#!"> <i class="icon ion-social-facebook x15"></i> fb_username</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!"> <i class="icon ion-social-twitter x15"></i> tw_handle</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!"> <i class="icon ion-social-instagram x15"></i> instagram</a></li>
+                        <li><a class="grey-text text-lighten-3" href="#!"> <i class="icon ion-social-whatsapp x15"></i> (+234)-812-345-6789</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2017 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">Powered by Company Name</a>
+            </div>
+        </div>
+    </footer>
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/app.js"></script>
